--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -486,6 +486,80 @@ img{
     }
 }
 
+/* about*/
+.about{
+
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    font-family> "Open Sans", sans-serif;
+    box-sizing: border-box;
+}
+.body{
+    min-height:100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.about-section{
+    background: url(pic.jpg) no-repeat left;
+    background-size: 55%;
+    background-color: #fdfdfd;
+    overflow: hidden;
+    padding: 100px 0;
+}
+.inner-container{
+    width: 55%;
+    float: right;
+    background-color: #fdfdfd;
+    padding: 150px;
+}
+.inner-container h1{
+    margin-bottom: 30px;
+    font-size: 30px; 900
+    font-weight: 900;
+}
+.text{
+    font-size: 13px;
+    color: #545454;
+    line-height; 30px;
+    text-align:justify;
+    margin-bottom: 40px;
+}
+.skills{
+    display: flex;
+    justify-content: space-between;
+    font-weightL 700;
+    font-size: 13px;
+}
+@media screen and (max-width:1200px){
+    .inner-container{
+        width: 100% ;
+    }
+}
+
+@media screen and (max-width:1200px){
+    .about-section
+        background-size: 100%;
+        padding: 100px 40px;
+    }
+    .inner-container{
+        width: 100% ;
+    }
+}
+
+@media screen and (max-width:1200px){
+    .about-section
+        padding: 0;
+    }
+    .inner-container{
+        padding: 60% ;
+    }
+}
+    
+
 .showModal{
     position: fixed;
     background: transparent;
