--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -13,7 +13,7 @@
 
 /* this is all for fixed header */
 /* The navigation bar */
-.navbar {
+.navbar_fixed {
   overflow: hidden;
   background-color: #333;
   position: fixed; /* Set the navbar to fixed position */
