--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -21,7 +21,7 @@
   width: 100%; /* Full width */
 }
 /* Links inside the navbar */
-.navbar a {
+.navbar_fixed a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -31,7 +31,7 @@
 }
 
 /* Change background on mouse-over */
-.navbar a:hover {
+.navbar_fixed a:hover {
   background: #ddd;
   color: black;
 }
