--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -12,12 +12,23 @@
 }
 
 /* this is all for fixed header */
+.heading {
+    padding: 20px;
+    text-align: center;
+    background: #333;
+    color: #f2f2f2;
+    font-size:30px;
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    width:100%;
+  }
 /* The navigation bar */
 .navbar_fixed {
   overflow: hidden;
   background-color: #333;
   position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
+  top: 20mm; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
 }
 /* Links inside the navbar */
@@ -29,6 +40,7 @@
   padding: 14px 16px;
   text-decoration: none;
 }
+
 
 /* Change background on mouse-over */
 .navbar_fixed a:hover {
