--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -537,12 +537,15 @@ img{
 /* about*/
 .about{
 
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    font-family> "Open Sans", sans-serif;
-    box-sizing: border-box;
+    padding: 20px;
+    text-align: center;
+    background: #333;
+    color: #f2f2f2;
+    font-size:30px;
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    width:100%;
 }
 .body{
     min-height:100vh;
