--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -535,6 +535,18 @@ img{
 
 
 /* about*/
+.about{
+
+    padding: 20px;
+    text-align: center;
+    background: #333;
+    color: #f2f2f2;
+    font-size:30px;
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    width:100%;
+}
 .body{
     min-height:100vh;
     display: flex;
