added subnav bar css style for initial display

--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -48,6 +48,17 @@
   color: black;
 }
 
+#navbar ul ul{
+    display:none;
+    position:absolute;
+    top:100%;
+    background-color:#fadde8;
+}
+
+#navbar ul li:hover > ul{
+    display:block;
+}
+
 /* Main content */
 
 .main {
