--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -48,7 +48,7 @@
   color: black;
 }
 
- #nav li.subNav:hover ul li {
+ .subNav a:hover ul li {
       visibility: visible;
       width:  171px;
       padding: 0;
