--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -577,6 +577,70 @@ img{
     }
 }
 
+/* Sign Up - Joe*/
+.sign-up
+{
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("images/banner-img.jpg") center/cover no-repeat;
+    color: #fff;
+    padding: 40px 200px;
+
+}
+
+.sign-up-form
+{
+    width: 500px;  /* How big the sign up form is*/
+    /*background: white; let the background be transparent*/
+    padding: 40px;
+    margin: 10% auto 0%; /* Centers the form & 0 margin from top and 0 margin from bottom */
+    text-align: center;
+}
+
+.sign-up-form h1
+{
+    color: white;
+    font-family: 'Playfair Display', serif;
+}
+
+.signup-input-box
+{
+    border-radius: 20px;   /*Circular Shape*/
+    padding: 7px;
+    margin: 5px 0;
+    width: 100%;
+    font-size: 15px;
+}
+
+.sign-up-form label, .book-form input{
+    width: 100%;
+}
+.sign-up-form label{
+    font-weight: 600;
+    word-spacing: 3px;
+    padding-bottom: 8px;
+}
+
+.signup-dob
+{
+    font-size: 15px;
+    width: 30%;
+    padding: 2px;
+    /*color: white;*/
+    border-radius: 20px;
+    cursor: pointer; /*brings thumb on hover*/
+}
+
+.sign-up-btn
+{
+    font-size: 15px;
+    margin: 5px 0;
+    width: 300;
+    padding: 2px;
+    color: white;
+    border-radius: 20px;
+    background-color: brown;
+    cursor: pointer; /*brings thumb on hover*/
+}
+
 /* about*/
 .about{
 
