--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -650,10 +650,15 @@ img{
     font-family: 'Playfair Display', serif;
     padding: 0;
     display: flex;
-    flex-direction: column;
     margin: 0;
     font-family> "Open Sans", sans-serif;
     box-sizing: border-box;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 30px;
+    color: var(--yellow);
+    border-bottom: 5px solid var(--dark);
+    width: 235px;
 }
 .body{
     min-height:100vh;
