formatting for text below sign in

--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -601,6 +601,12 @@ img{
     font-family: 'Playfair Display', serif;
 }
 
+
+.sign-up-form a 
+{
+    color: white;
+}
+
 .signup-input-box
 {
     border-radius: 20px;   /*Circular Shape*/
