--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -672,16 +672,24 @@ img{
     padding: 100px 0;
 }
 .inner-container{
+     background-color: #fdfdfd;
+     padding: 200px;
 }
 .inner-container h1{
     margin-bottom: 30px;
-    font-size: 30px; 900
-    font-weight: 900;
+    color: #545454;
+    text-align:justify;
+    margin: 40px;
 }
 .text{
+    flex: 1;
+    text-align: center;
+    width: 80vw;
     padding: 22px 0;
     font-size: 45px;
     border-bottom: 1px solid #fff;
+    opacity: 0.7;
+    width: 60vw;
 }
 .skills{
     display: flex;
