--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -677,7 +677,7 @@ img{
 }
 .inner-container h1{
     margin-bottom: 30px;
-    color: #545454;
+    color: #f2f2f2;
     text-align:justify;
     margin: 40px;
     font-size: 30px; 900
