--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -673,22 +673,20 @@ img{
      padding: 150;
 }
 .inner-container h1{
-    margin-bottom: 30px;
-    color: #f2f2f2;
-    text-align:justify;
-    margin: 40px;
-    font-size: 30px; 900
+   
+    margin-bottom: 40px;
+    font-size: 13px;
     font-weight: 900;
-    border-bottom: 1px solid #fff;
 }
 .text{
+    margin-bottom: 40px;
+    color: #545454;
+    line-height: 30px;
+    text-align:justify;
     flex: 1;
     text-align: center;
     width: 80vw;
-    padding: 22px 0;
     font-size: 45px;
-    border-bottom: 1px solid #fff;
-    opacity: 0.7;
     width: 60vw;
 }
 .skills{
