new spacer to make nav bar compatible

--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -12,6 +12,11 @@
 }
 
 /* this is all for fixed header */
+.spacer {
+    top: 17mm;
+    padding: 17mm;
+    width: 100%;
+}
 .heading {
     padding: 20px;
     text-align: center;
