--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -668,6 +668,10 @@ img{
     justify-content: center;
     
 }
+.about-section{
+    background-size: 55%;
+    background-color: #fdfdfd;
+    overflow: hidden;
 
 .inner-container{
      background-color: #fdfdfd;
