--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -661,20 +661,14 @@ img{
     align-content: stretch;
     
 }
-.body{
-    min-height:100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
+
 .about-section{
     background-size: 20%;
 }
 
 .inner-container{
      background-color: #fdfdfd;
-     float: right;
+     float: center;
      width: 60%;
      padding: 150;
 }
@@ -690,12 +684,13 @@ img{
     line-height: 30px;
     text-align: center;
     font-size: 20px;
+    font-weight: 700;
 }
 .skills{
     display: flex;
     color: #545454;
     justify-content: space-between;
-    font-weight: 700;
+    font-weight: 900;
     font-size: 13px;
 }
 @media(max-width: 500px){
