--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -651,18 +651,24 @@ img{
 }
 
 /* about*/
+.spacer {
+    top: 17mm;
+    padding: 17mm;
+    width: 100%;
+}
 .about{
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2)), url("images/happydogs.jpg") center/cover no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2)), url("images/banner-img.jpg") center/cover no-repeat;
     min-height: 100vh;
+    color: #fff;
     padding: 25px;
     display: flex;
-    align-content: center;
-    
+    flex-direction: column;
+    align-content: stretch;
 }
-
 .about-section{
     background-size: 20%;
     display: grid;
+    backgroud: transparent;
 }
 
 .inner-container{
@@ -671,6 +677,7 @@ img{
      width: 60%;
      padding: 150;
      border: 1px solid #fff;
+     display: grid;
 }
 .inner-container h1{
    
@@ -696,8 +703,6 @@ img{
 @media(min-width: 992px){
     .inner-container{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 30px;
     }
     .about-section h2{
         font-size: 10px!important;
