--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -671,8 +671,8 @@ img{
      width: 1200px;
      height:300px;
      margin: 240px auto;
-     background-color: #000;
-     float: right;
+     background-color: #f1f1f1;
+     float: left;
      box-sizing: border-box;
      overflow: hidden;
      border-radius: 10px;
