--- a/hotel-gp-single-page-site-master/main.css
+++ b/hotel-gp-single-page-site-master/main.css
@@ -656,7 +656,7 @@ img{
     padding: 17mm;
     width: 100%;
 }
-.about{
+.abouts{
     margin-top: 40px;
     padding: 40px 0;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/customer-banner.jpg") center/cover no-repeat fixed;
